--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "link:fix": "eslint --fix ."
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.8.1",
     "koa-body": "^4.1.1",
@@ -21,8 +22,11 @@
     "koa-jwt": "^3.6.0",
     "koa-router": "^7.4.0",
     "koa-static2": "^0.1.8",
+    "moment": "^2.24.0",
+    "mysql": "^2.17.1",
+    "mysql2": "^2.0.0",
     "nodemailer": "^6.3.0",
-    "promise-mysql": "^4.1.0",
+    "promise-mysql": "^4.1.1",
     "sequelize": "^5.18.4"
   },
   "devDependencies": {
