--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mysql2": "^2.0.0",
     "nodemailer": "^6.3.0",
     "promise-mysql": "^4.1.1",
+    "qiniu": "^7.2.2",
     "require-directory": "^2.1.1",
     "sequelize": "^5.18.4"
   },
